--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -54,8 +54,6 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
   - To create a NebulaGraph Enterprise cluster
 
-    Contact our sales team to get a complete NebulaGraph Enterprise Edition cluster YAML example.
-
     === "Cluster without Zones"
 
         You must set the following parameters in the configuration file for the enterprise edition. Other parameters can be changed as needed. For information on other parameters, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml). 
@@ -90,7 +88,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
                 image: reg.vesoft-inc.com/xxx/xxx
                 version: v3.6.0-sc
               exporter:
-                image: vesoft/xxx
+                image: vesoft/nebula-stats-exporter
                 replicas: 1
                 maxRequests: 20
               # Used to create a console container,
@@ -165,6 +163,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
                     requests:
                       storage: 2Gi
                   storageClassName: local-path
+                # Automatically balance storage data after scaling out.
                 enableAutoBalance: true
               reference:
                 name: statefulsets.apps
