--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -44,7 +44,7 @@ The following provides examples of the configuration file to enable mTLS between
       name: nebula
     spec:
       exporter:
-        image: vesoft/xxx
+        image: vesoft/nebula-stats-exporter
         replicas: 1
         maxRequests: 20
       graphd:
@@ -172,9 +172,10 @@ The following provides examples of the configuration file to enable mTLS between
       name: nebula
     spec:
       exporter:
-        image: vesoft/xxx
+        image: vesoft/nebula-stats-exporter
         replicas: 1
         maxRequests: 20
+      # The certificate files for NebulaGraph Operator to access Storage and Meta services.
       sslCerts:
         clientSecret: "client-cert"
         caSecret: "ca-cert" 
@@ -350,6 +351,7 @@ The following provides examples of the configuration file to enable mTLS between
             requests:
               storage: 1Gi
           storageClassName: local-path
+        # Automatically balance storage data after scaling out. 
         enableAutoBalance: true
       reference:
         name: statefulsets.apps
@@ -358,7 +360,9 @@ The following provides examples of the configuration file to enable mTLS between
       imagePullPolicy: Always
       imagePullSecrets:
         - name: nebula-image
+      # Whether to automatically delete PVCs when deleting a cluster.
       enablePVReclaim: true
+      # Used to evenly distribute Pods across Zones.
       topologySpreadConstraints:
       - topologyKey: "kubernetes.io/zone"
         whenUnsatisfiable: "DoNotSchedule"
@@ -484,7 +488,7 @@ volumeMounts:
 
 ### Configure `sslCerts`
 
-When you enable mTLS between services, you still needs to set `spec.sslCerts`, because NebulaGraph Operator communicates with the Graph service, Meta service, and Storage service, 
+When you enable mTLS between services, you still needs to set `spec.sslCerts`, because NebulaGraph Operator communicates with the Meta service and Storage service. 
 
 The `spec.sslCerts` field specifies the encrypted certificates for NebulaGraph Operator and the [nebula-agent](https://github.com/vesoft-inc/nebula-agent) client (if you do not use the default nebula-agent image in Operator).
 
