--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -129,8 +129,15 @@
           --set nebula.metad.config.zone_list=<zone1,zone2,zone3> \
           --set nebula.graphd.config.prioritize_intra_zone_reading=true \
           --set nebula.graphd.config.stick_to_intra_zone_on_failure=false \
+          # Evenly distribute the Pods of the Storage service across Zones.
+          --set nebula.topologySpreadConstraints[0].topologyKey=topology.kubernetes.io/zone \
+          --set nebula.topologySpreadConstraints[0].whenUnsatisfiable=DoNotSchedule \
           --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
       ```      
+
+      !!! caution
+
+          Make sure storage Pods are evenly distributed across zones before ingesting data by running `SHOW ZONES` in nebula-console. For zone-related commands, see [Zones](../../4.deployment-and-installation/5.zone.md).
 
   {{ent.ent_end}}
 
@@ -141,7 +148,7 @@
   Use the `--set` argument to set configuration parameters for the cluster. For example, `--set nebula.storaged.replicas=3` will set the number of replicas for the Storage service in the cluster to 3.
 
 
-7. Check the status of the NebulaGraph cluster you created.
+1. Check the status of the NebulaGraph cluster you created.
    
   ```bash
   kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" get pod -l "app.kubernetes.io/cluster=${NEBULA_CLUSTER_NAME}"
