--- a/docs-2.0/7.data-security/1.authentication/2.management-user.md
+++ b/docs-2.0/7.data-security/1.authentication/2.management-user.md
@@ -30,7 +30,7 @@ The `root` user with the **GOD** role can run `CREATE USER` to create a new user
   ```ngql
   CREATE USER [IF NOT EXISTS] <user_name> [WITH PASSWORD '<password>'][WITH IP WHITELIST <ip_list>];
   ```
-  - `ip_list`: Sets the IP address whitelist. The user can connect to NebulaGraph only from IP addresses in the list. Use commas to separate multiple IP addresses.
+  - `ip_list`: Sets the IP address whitelist. Any IP can connect to the database without this option. When this option is used, only IPs in the list can connect to the database. Use commas to separate multiple IP addresses.
 
 {{ ent.ent_end }}
 
