--- a/docs-2.0/nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
+++ b/docs-2.0/nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
@@ -47,75 +47,13 @@ Before deploying Dashboard Enterprise Edition, you must do a check of these:
   tar -xzvf nebula-dashboard-ent-{{dashboard_ent.release}}.linux-amd64.tar.gz -C /usr/local/
   ```
 
-3. Enter the extracted folder and modify the `config.yaml` file in the `etc` directory to set the `LicenseManagerURL` parameter to the host IP and port number `9119` where the License Manager ([LM](../9.about-license/2.license-management-suite/3.license-manager.md)) is located and to set the relevant configuration.
+3. Enter the extracted folder.
 
-  ```bash
-  Name: dashboard-api
-  Host: 0.0.0.0     # Specifies the address segment that can access Dashboard.
-  Port: 7005  # The default port used to access Dashboard Enterprise Edition.  
-  MaxBytes: 1073741824 # The maximum content length of an Http request that can be accepted. The default value is 1048576. Value range: 0 ~ 8388608.
-  Timeout: 60000  # Timeout duration of the access.
-  Log:     # Dashboard run log settings.
-    KeepDays: 7    # The number of days for keeping log.
-    Mode: file   # The save mode of logs, including console and file. console means the service logs are logged in webserver.log. file means the service logs are logged in access.log, error.log, severe.log, slow.log, and stat.log respectively.
-    Encoding: plain # Log encoding method, plain and json are supported.
-  Database:
-    Dialect: sqlite  # The database type used to store metadata. Only support SQLite and MySQL currently. The default value is SQLite.
-    AutoMigrate: true # Whether to automatically create a database table. Defaults to true.
-    Host: 127.0.0.1 # The IP address of the connected MySQL database.
-    Port: 3306  # The port of the connected MySQL database.
-    Username: root # The username to log in MySQL.
-    Password: nebula # The password to log in MySQL.
-    Name: dashboard # The name of the corresponding database.
+4. (Optional) If the LM service has been deployed, modify the `config.yaml` file in the `etc` directory. Set the value of `LicenseManagerURL` to the IP of the host where LM is located and the port number to `9119`, for example `192.168.8.100:9119`. If the LM service is not deployed, it can be deployed in the visualization page after connecting Dashboard Enterprise Edition.
 
-  # Information about the exporter port
-  Exporter:
-    NodePort: 9100 # The port of the node-exporter service.
-    NebulaPort: 9200 # The port of the nebula-stats-exporter service.
+  For more configuration descriptions, see the **Configuration file description** section at the end of the topic. 
 
-  # Information of services 
-  Proxy:
-    PrometheusAddr: 127.0.0.1:9091 # The IP address and port of the prometheus service.
-    AlertmanagerAddr: 127.0.0.1:9093 # The IP address and port of the Alertmanager service.
-
-  # Self-built Prometheus service configuration. If you are using the Prometheus service included with the software, you do not need to set these parameters.
-  # PrometheusConfig: 
-  #   Auth:   # If authentication is enabled in Prometheus, the following parameters need to be configured. AccessToken is preferred.
-  #     Username: "" # The account of the Prometheus HTTP API service.
-  #     Password: "" # The password for the account.
-  #     AccessToken: ""  # The access token of the Prometheus HTTP API service.
-  #   RuleImport:  # Configuration for remotely updating alert rules to the Prometheus service.
-  #     Enable: false  # Whether to enable remote updating.
-  #     URL: "https://xxxx/prometheus/import"  # The interface address for updating the alert rule.
-  #     Method: POST  # Update method. Only POST operations are supported.
-  #     Auth:  # If the authentication is enabled on the interface of the URL, the following parameters need to be configured. AccessToken is preferred. AccessToken is preferred.
-  #       AccessToken: ""  # The access token of the URL interface.
-  #       Username: ""  # The authentication account of the URL interface.
-  #       Password: ""  # The password for the account.
-
-  # Information of the sender's Email used to invite LDAP accounts.
-  Mail:
-    Host: smtp.office365.com #  The SMTP server address.
-    Port: 587 # The port number of the SMTP server.
-    Username: "" # The SMTP server account name.
-    Password: "" # The SMTP server password.
-
-  # SlowQuery
-  SlowQuery:
-    Enable: true # The switch of slowquery data polling.
-    MessageStore: 14 # Slow queary data store time (day).
-    ScrapeInterval: 2m # The interval time for slow query data pulling, eg: 1s, 10s, 2m, 3h
-
-  # System information
-  System:
-    WebAddress: http://127.0.0.1:7005 # The external access for Dashboard. It can be set as a hostname, used for interface callbacks. For example, the invitee who is invited by mail can use this link to access Dashboard.
-    MessageStore: 90 # It sets the number of days to keep alert messages, the value of which is 90 by default.
-
-  CloudProvider: "" # cloud provider name, used for aliyun now.
-  LicenseManagerURL: "" # license manager url.
-  ```  
-
-4. Start Dashboard.
+5. Start Dashboard.
 
   You can use the following command to start the Dashboard with one click.
 
@@ -163,75 +101,13 @@ The Linux version used is CentOS and lsof has been installed.
   sudo rpm -i nebula-dashboard-ent-xxx.rpm --prefix=<path> 
   ```
 
-3. Enter the extracted folder and modify the `config.yaml` file in the `etc` directory to set the `LicenseManagerURL` parameter to the host IP and port number `9119` where the License Manager ([LM](../9.about-license/2.license-management-suite/3.license-manager.md)) is located and to set the relevant configuration.
+3. Enter the extracted folder.
 
-  ```bash
-  Name: dashboard-api
-  Host: 0.0.0.0     # Specifies the address segment that can access Dashboard.
-  Port: 7005  # The default port used to access Dashboard Enterprise Edition.  
-  MaxBytes: 1073741824 # The maximum content length of an Http request that can be accepted. The default value is 1048576. Value range: 0 ~ 8388608.
-  Timeout: 60000  # Timeout duration of the access.
-  Log:     # Dashboard run log settings.
-    KeepDays: 7    # The number of days for keeping log.
-    Mode: file   # The save mode of logs, including console and file. console means the service logs are logged in webserver.log. file means the service logs are logged in access.log, error.log, severe.log, slow.log, and stat.log respectively.
-    Encoding: plain # Log encoding method, plain and json are supported.
-  Database:
-    Dialect: sqlite  # The database type used to store metadata. Only support SQLite and MySQL currently. The default value is SQLite.
-    AutoMigrate: true # Whether to automatically create a database table. Defaults to true.
-    Host: 127.0.0.1 # The IP address of the connected MySQL database.
-    Port: 3306  # The port of the connected MySQL database.
-    Username: root # The username to log in MySQL.
-    Password: nebula # The password to log in MySQL.
-    Name: dashboard # The name of the corresponding database.
+4. (Optional) If the LM service has been deployed, modify the `config.yaml` file in the `etc` directory. Set the value of `LicenseManagerURL` to the IP of the host where LM is located and the port number to `9119`, for example `192.168.8.100:9119`. If the LM service is not deployed, it can be deployed in the visualization page after connecting Dashboard Enterprise Edition.
 
-  # Information about the exporter port
-  Exporter:
-    NodePort: 9100 # The port of the node-exporter service.
-    NebulaPort: 9200 # The port of the nebula-stats-exporter service.
+  For more configuration descriptions, see the **Configuration file description** section at the end of the topic.
 
-  # Information of services 
-  Proxy:
-    PrometheusAddr: 127.0.0.1:9091 # The IP address and port of the prometheus service.
-    AlertmanagerAddr: 127.0.0.1:9093 # The IP address and port of the Alertmanager service.
-
-  # Self-built Prometheus service configuration. If you are using the Prometheus service included with the software, you do not need to set these parameters.
-  # PrometheusConfig: 
-  #   Auth:   # If authentication is enabled in Prometheus, the following parameters need to be configured. AccessToken is preferred.
-  #     Username: "" # The account of the Prometheus HTTP API service.
-  #     Password: "" # The password for the account.
-  #     AccessToken: ""  # The access token of the Prometheus HTTP API service.
-  #   RuleImport:  # Configuration for remotely updating alert rules to the Prometheus service.
-  #     Enable: false  # Whether to enable remote updating.
-  #     URL: "https://xxxx/prometheus/import"  # The interface address for updating the alert rule.
-  #     Method: POST  # Update method. Only POST operations are supported.
-  #     Auth:  # If the authentication is enabled on the interface of the URL, the following parameters need to be configured. AccessToken is preferred. AccessToken is preferred.
-  #       AccessToken: ""  # The access token of the URL interface.
-  #       Username: ""  # The authentication account of the URL interface.
-  #       Password: ""  # The password for the account.
-
-  # Information of the sender's Email used to invite LDAP accounts.
-  Mail:
-    Host: smtp.office365.com #  The SMTP server address.
-    Port: 587 # The port number of the SMTP server.
-    Username: "" # The SMTP server account name.
-    Password: "" # The SMTP server password.
-
-  # SlowQuery
-  SlowQuery:
-    Enable: true # The switch of slowquery data polling.
-    MessageStore: 14 # Slow queary data store time (day).
-    ScrapeInterval: 2m # The interval time for slow query data pulling, eg: 1s, 10s, 2m, 3h
-
-  # System information
-  System:
-    WebAddress: http://127.0.0.1:7005 # The external access for Dashboard. It can be set as a hostname, used for interface callbacks. For example, the invitee who is invited by mail can use this link to access Dashboard.
-    MessageStore: 90 # It sets the number of days to keep alert messages, the value of which is 90 by default.
-
-  CloudProvider: "" # cloud provider name, used for aliyun now.
-  LicenseManagerURL: "" # license manager url.
-  ```  
-
-4. Run the following commands to view the status of and start all the services.
+5. Run the following commands to view the status of and start all the services.
 
   ```
   sudo systemctl list-dependencies nebula-dashboard.target  # View the status of all the services.
@@ -274,76 +150,13 @@ sudo rpm -e <package_name>
   sudo dpkg -i nebula-dashboard-ent-{{dashboard_ent.release}}.ubuntu1804.amd64.deb
   ```
 
-3. Enter the extracted folder and modify the `config.yaml` file in the `etc` directory to set the `LicenseManagerURL` parameter to the host IP and port number `9119` where the License Manager ([LM](../9.about-license/2.license-management-suite/3.license-manager.md)) is located and to set the relevant configuration.
-   
+3. Enter the extracted folder.
 
-  ```bash
-  Name: dashboard-api
-  Host: 0.0.0.0     # Specifies the address segment that can access Dashboard.
-  Port: 7005  # The default port used to access Dashboard Enterprise Edition.  
-  MaxBytes: 1073741824 # The maximum content length of an Http request that can be accepted. The default value is 1048576. Value range: 0 ~ 8388608.
-  Timeout: 60000  # Timeout duration of the access.
-  Log:     # Dashboard run log settings.
-    KeepDays: 7    # The number of days for keeping log.
-    Mode: file   # The save mode of logs, including console and file. console means the service logs are logged in webserver.log. file means the service logs are logged in access.log, error.log, severe.log, slow.log, and stat.log respectively.
-    Encoding: plain # Log encoding method, plain and json are supported.
-  Database:
-    Dialect: sqlite  # The database type used to store metadata. Only support SQLite and MySQL currently. The default value is SQLite.
-    AutoMigrate: true # Whether to automatically create a database table. Defaults to true.
-    Host: 127.0.0.1 # The IP address of the connected MySQL database.
-    Port: 3306  # The port of the connected MySQL database.
-    Username: root # The username to log in MySQL.
-    Password: nebula # The password to log in MySQL.
-    Name: dashboard # The name of the corresponding database.
+4. (Optional) If the LM service has been deployed, modify the `config.yaml` file in the `etc` directory. Set the value of `LicenseManagerURL` to the IP of the host where LM is located and the port number to `9119`, for example `192.168.8.100:9119`. If the LM service is not deployed, it can be deployed in the visualization page after connecting Dashboard Enterprise Edition.
 
-  # Information about the exporter port
-  Exporter:
-    NodePort: 9100 # The port of the node-exporter service.
-    NebulaPort: 9200 # The port of the nebula-stats-exporter service.
+  For more configuration descriptions, see the **Configuration file description** section at the end of the topic.
 
-  # Information of services 
-  Proxy:
-    PrometheusAddr: 127.0.0.1:9091 # The IP address and port of the prometheus service.
-    AlertmanagerAddr: 127.0.0.1:9093 # The IP address and port of the Alertmanager service.
-
-  # Self-built Prometheus service configuration. If you are using the Prometheus service included with the software, you do not need to set these parameters.
-  # PrometheusConfig: 
-  #   Auth:   # If authentication is enabled in Prometheus, the following parameters need to be configured. AccessToken is preferred.
-  #     Username: "" # The account of the Prometheus HTTP API service.
-  #     Password: "" # The password for the account.
-  #     AccessToken: ""  # The access token of the Prometheus HTTP API service.
-  #   RuleImport:  # Configuration for remotely updating alert rules to the Prometheus service.
-  #     Enable: false  # Whether to enable remote updating.
-  #     URL: "https://xxxx/prometheus/import"  # The interface address for updating the alert rule.
-  #     Method: POST  # Update method. Only POST operations are supported.
-  #     Auth:  # If the authentication is enabled on the interface of the URL, the following parameters need to be configured. AccessToken is preferred. AccessToken is preferred.
-  #       AccessToken: ""  # The access token of the URL interface.
-  #       Username: ""  # The authentication account of the URL interface.
-  #       Password: ""  # The password for the account.
-
-  # Information of the sender's Email used to invite LDAP accounts.
-  Mail:
-    Host: smtp.office365.com #  The SMTP server address.
-    Port: 587 # The port number of the SMTP server.
-    Username: "" # The SMTP server account name.
-    Password: "" # The SMTP server password.
-
-  # SlowQuery
-  SlowQuery:
-    Enable: true # The switch of slowquery data polling.
-    MessageStore: 14 # Slow queary data store time (day).
-    ScrapeInterval: 2m # The interval time for slow query data pulling, eg: 1s, 10s, 2m, 3h
-
-  # System information
-  System:
-    WebAddress: http://127.0.0.1:7005 # The external access for Dashboard. It can be set as a hostname, used for interface callbacks. For example, the invitee who is invited by mail can use this link to access Dashboard.
-    MessageStore: 90 # It sets the number of days to keep alert messages, the value of which is 90 by default.
-
-  CloudProvider: "" # cloud provider name, used for aliyun now.
-  LicenseManagerURL: "" # license manager url.
-  ```  
-
-4. Run the following commands to view the status of and start all the services.
+5. Run the following commands to view the status of and start all the services.
 
   ```
   sudo systemctl list-dependencies nebula-dashboard.target  # View the status of all the services.
@@ -452,6 +265,74 @@ The following section presents two methods for managing the Dashboard service. I
   ```bash
   journalctl -u nbd-prometheus.service -b
   ```
+
+## Configuration file description
+
+```bash
+Name: dashboard-api
+Host: 0.0.0.0     # Specifies the address segment that can access Dashboard.
+Port: 7005  # The default port used to access Dashboard Enterprise Edition.  
+MaxBytes: 1073741824 # The maximum content length of an Http request that can be accepted. The default value is 1048576. Value range: 0 ~ 8388608.
+Timeout: 60000  # Timeout duration of the access.
+Log:     # Dashboard run log settings.
+  KeepDays: 7    # The number of days for keeping log.
+  Mode: file   # The save mode of logs, including console and file. console means the service logs are logged in webserver.log. file means the service logs are logged in access.log, error.log, severe.log, slow.log, and stat.log respectively.
+  Encoding: plain # Log encoding method, plain and json are supported.
+Database:
+  Dialect: sqlite  # The database type used to store metadata. Only support SQLite and MySQL currently. The default value is SQLite.
+  AutoMigrate: true # Whether to automatically create a database table. Defaults to true.
+  Host: 127.0.0.1 # The IP address of the connected MySQL database.
+  Port: 3306  # The port of the connected MySQL database.
+  Username: root # The username to log in MySQL.
+  Password: nebula # The password to log in MySQL.
+  Name: dashboard # The name of the corresponding database.
+
+# Information about the exporter port
+Exporter:
+  NodePort: 9100 # The port of the node-exporter service.
+  NebulaPort: 9200 # The port of the nebula-stats-exporter service.
+
+# Information of services 
+Proxy:
+  PrometheusAddr: 127.0.0.1:9091 # The IP address and port of the prometheus service.
+  AlertmanagerAddr: 127.0.0.1:9093 # The IP address and port of the Alertmanager service.
+
+# Self-built Prometheus service configuration. If you are using the Prometheus service included with the software, you do not need to set these parameters.
+# PrometheusConfig: 
+#   Auth:   # If authentication is enabled in Prometheus, the following parameters need to be configured. AccessToken is preferred.
+#     Username: "" # The account of the Prometheus HTTP API service.
+#     Password: "" # The password for the account.
+#     AccessToken: ""  # The access token of the Prometheus HTTP API service.
+#   RuleImport:  # Configuration for remotely updating alert rules to the Prometheus service.
+#     Enable: false  # Whether to enable remote updating.
+#     URL: "https://xxxx/prometheus/import"  # The interface address for updating the alert rule.
+#     Method: POST  # Update method. Only POST operations are supported.
+#     Auth:  # If the authentication is enabled on the interface of the URL, the following parameters need to be configured. AccessToken is preferred. AccessToken is preferred.
+#       AccessToken: ""  # The access token of the URL interface.
+#       Username: ""  # The authentication account of the URL interface.
+#       Password: ""  # The password for the account.
+
+# Information of the sender's Email used to invite LDAP accounts.
+Mail:
+  Host: smtp.office365.com #  The SMTP server address.
+  Port: 587 # The port number of the SMTP server.
+  Username: "" # The SMTP server account name.
+  Password: "" # The SMTP server password.
+
+# SlowQuery
+SlowQuery:
+  Enable: true # The switch of slowquery data polling.
+  MessageStore: 14 # Slow queary data store time (day).
+  ScrapeInterval: 2m # The interval time for slow query data pulling, eg: 1s, 10s, 2m, 3h
+
+# System information
+System:
+  WebAddress: http://127.0.0.1:7005 # The external access for Dashboard. It can be set as a hostname, used for interface callbacks. For example, the invitee who is invited by mail can use this link to access Dashboard.
+  MessageStore: 90 # It sets the number of days to keep alert messages, the value of which is 90 by default.
+
+CloudProvider: "" # cloud provider name, used for aliyun now.
+LicenseManagerURL: "" # license manager url.
+```  
 
 ## Next to do
 
