--- a/docs-2.0/nebula-dashboard-ent/4.cluster-operator/10.database-user.md
+++ b/docs-2.0/nebula-dashboard-ent/4.cluster-operator/10.database-user.md
@@ -19,9 +19,9 @@ Users can manage account permissions for databases within the cluster, including
   
   !!! note
 
-        Support batch creation of database users. Clicking **Add** in the upper left corner will add a new line of configuration items.
+        To create database users in batches, click **Add** in the upper left corner to add a new line of configuration items.
 
-3. Click **Confirm**.
+1. Click **Confirm**.
 
 ## Authorizing graph space permissions
 
@@ -30,6 +30,6 @@ Users can manage account permissions for databases within the cluster, including
 
   !!! note
 
-        Support batch authorization. Clicking **Add** in the upper left corner will add a new line of configuration items.
+        To authorize in batches, click **Add** in the upper left corner to add a new line of configuration items.
 
-3. Click **Confirm**.
+1. Click **Confirm**.
