--- a/docs-2.0/nebula-dashboard-ent/5.account-management.md
+++ b/docs-2.0/nebula-dashboard-ent/5.account-management.md
@@ -38,15 +38,15 @@ Dashboard Enterprise Edition enables you to create local accounts.
 
 ## Account roles
 
-You can set different roles for your accounts. Roles are different in permissions. There are two types of account roles in Dashboard Enterprise Edition.
+You can set different roles for your accounts. Roles have different permissions. There are two types of account roles in Dashboard Enterprise Edition.
 
 ![roles](https://docs-cdn.nebula-graph.com.cn/figures/eo_dash_role_231007_en.png)
 
 - Platform roles: `admin` and `user`.
   - The `admin` role is equivalent to the administrator of the platform, who can manage the platform roles of all accounts, and can perform daily operation and maintenance operations on all clusters.
-  - The `user` role is equivalent to an normal user of the platform, who can only manage the clusters that it has created or been authorized to manage.
+  - The `user` role is equivalent to a general user of the platform, who can only manage the clusters that the user has created or been authorized to manage.
 - Cluster roles: `owner` and `operator`.
-  - The `owner` role represents the owner of a cluster, and can authorize other accounts to manage its clusters. Any account that creates a cluster sets itself as `owner`, and that account can also transfer the `owner` role to other accounts.
+  - The `owner` role represents the owner of a cluster, you can authorize other accounts to manage your clusters. You set yourself up as the `owner` when you create a cluster, and you can transfer the `owner` role to other accounts.
   - The `operator` role means that you can perform daily operations on the cluster, but you cannot transfer the `owner` role, change the cluster database password, unbind the cluster, and delete the cluster.
 
 ## Create accounts
