--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md
@@ -6,7 +6,7 @@ You can also define the automatic deletion of PVCs to release data by setting th
 
 ## Notes
 
-The NebulaGraph Operator currently does not support the resizing of Persistent Volume Claims (PVCs), but this feature is expected to be supported in version 1.6.1. Additionally, the Operator does not support dynamically adding or mounting storage volumes to a running storaged instance.
+NebulaGraph Operator does not support dynamically adding or mounting storage volumes to a running storaged instance.
 
 ## Prerequisites
 
