--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -536,255 +536,255 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
 
 ## mTLS without hot-reloading
 
-??? info "If you don't need to perform TLS certificate hot-reloading and prefer to use TLS certificates stored in a Secret when deploying Kubernetes applications, expand to follow these steps"
+If you don't need to perform TLS certificate hot-reloading and prefer to use TLS certificates stored in a Secret when deploying Kubernetes applications, you can follow the steps below to enable mTLS in NebulaGraph.
 
-    ### Create a TLS-type Secret
+### Create a TLS-type Secret
 
-    In a K8s cluster, you can create Secrets to store sensitive information, such as passwords, OAuth tokens, and TLS certificates. In NebulaGraph, you can create a Secret to store TLS certificates and private keys. When creating a Secret, the type `tls` should be specified. A `tls` Secret is used to store TLS certificates.
+In a K8s cluster, you can create Secrets to store sensitive information, such as passwords, OAuth tokens, and TLS certificates. In NebulaGraph, you can create a Secret to store TLS certificates and private keys. When creating a Secret, the type `tls` should be specified. A `tls` Secret is used to store TLS certificates.
 
-    For example, to create a Secret for storing server certificates and private keys:
+For example, to create a Secret for storing server certificates and private keys:
 
-    ```bash
-    kubectl create secret tls <server-cert> --key=<path/to/tls.key> --cert=<path/to/tls.cert> --namespace=<namespace>
-    ```
+```bash
+kubectl create secret tls <server-cert> --key=<path/to/tls.key> --cert=<path/to/tls.cert> --namespace=<namespace>
+```
 
-    - `<server-cert>`: The name of the Secret storing the server certificate and private key.
-    - `<path/to/tls.key>`: The path to the server private key file.
-    - `<path/to/tls.cert>`: The path to the server certificate file.
-    - `<namespace>`: The namespace where the Secret is located. If `--namespace` is not specified, it defaults to the `default` namespace.
+- `<server-cert>`: The name of the Secret storing the server certificate and private key.
+- `<path/to/tls.key>`: The path to the server private key file.
+- `<path/to/tls.cert>`: The path to the server certificate file.
+- `<namespace>`: The namespace where the Secret is located. If `--namespace` is not specified, it defaults to the `default` namespace.
 
-    You can follow the above steps to create Secrets for the client certificate and private key, and the CA certificate.
+You can follow the above steps to create Secrets for the client certificate and private key, and the CA certificate.
 
 
-    To view the created Secrets:
+To view the created Secrets:
 
-    ```bash
-    kubectl get secret --namespace=<namespace> 
-    ```
+```bash
+kubectl get secret --namespace=<namespace> 
+```
 
-    ### Configure certifications
+### Configure certifications
 
-    Operator provides the `sslCerts` field to specify the encrypted certificates. The `sslCerts` field contains four subfields. These three fields `serverSecret`, `clientSecret`, and `caSecret` are used to specify the Secret names of the NebulaGraph server certificate, client certificate, and CA certificate, respectively. 
-    When you specify these three fields, Operator reads the certificate content from the corresponding Secret and mounts it into the cluster's Pod. The `autoMountServerCerts` must be set to `true` if you want to automatically mount the server certificate and private key into the Pod. The default value is `false`.
+Operator provides the `sslCerts` field to specify the encrypted certificates. The `sslCerts` field contains four subfields. These three fields `serverSecret`, `clientSecret`, and `caSecret` are used to specify the Secret names of the NebulaGraph server certificate, client certificate, and CA certificate, respectively. 
+When you specify these three fields, Operator reads the certificate content from the corresponding Secret and mounts it into the cluster's Pod. The `autoMountServerCerts` must be set to `true` if you want to automatically mount the server certificate and private key into the Pod. The default value is `false`.
 
-    ```yaml
+```yaml
+sslCerts:
+autoMountServerCerts: "true"    # Automatically mount the server certificate and private key into the Pod.
+serverSecret: "server-cert"     # The name of the server certificate Secret.
+serverCert: ""                  # The key name of the certificate in the server certificate Secret, default is tls.crt.
+serverKey: ""                   # The key name of the private key in the server certificate Secret, default is tls.key.
+clientSecret: "client-cert"     # The name of the client certificate Secret.
+clientCert: ""                  # The key name of the certificate in the client certificate Secret, default is tls.crt.
+clientKey: ""                   # The key name of the private key in the client certificate Secret, default is tls.key.
+caSecret: "ca-cert"             # The name of the CA certificate Secret.
+caCert: ""                      # The key name of the certificate in the CA certificate Secret, default is ca.crt.
+```
+
+The `serverCert` and `serverKey`, `clientCert` and `clientKey`, and `caCert` are used to specify the key names of the certificate and private key of the server Secret, the key names of the certificate and private key of the client Secret, and the key name of the CA Secret certificate. If you do not customize these field values, Operator defaults `serverCert` and `clientCert` to `tls.crt`, `serverKey` and `clientKey` to `tls.key`, and `caCert` to `ca.crt`. However, in the K8s cluster, the TLS type Secret uses `tls.crt` and `tls.key` as the default key names for the certificate and private key. Therefore, after creating the NebulaGraph cluster, you need to manually change the `caCert` field from `ca.crt` to `tls.crt` in the cluster configuration, so that the Operator can correctly read the content of the CA certificate. Before you customize these field values, you need to specify the key names of the certificate and private key in the Secret when creating it. For how to create a Secret with the key name specified, run the `kubectl create secret generic -h` command for help.
+
+You can use the `insecureSkipVerify` field to decide whether the client will verify the server's certificate chain and hostname. In production environments, it is recommended to set this to `false` to ensure the security of communication. If set to `true`, the client will not verify the server's certificate chain and hostname.
+
+```yaml
+sslCerts:
+# Determines whether the client needs to verify the server's certificate chain and hostname when establishing an SSL connection. 
+insecureSkipVerify: false 
+```
+
+!!! caution
+
+    Make sure that you have added the hostname or IP of the server to the server's certificate's `subjectAltName` field before the `insecureSkipVerify` is set to `false`. If the hostname or IP of the server is not added, an error will occur when the client verifies the server's certificate chain and hostname. For details, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
+
+When the certificates are approaching expiration, they can be automatically updated by installing [cert-manager](https://cert-manager.io/docs/installation/supported-releases/). NebulaGraph will monitor changes to the certificate directory files, and once a change is detected, it will load the new certificate content into memory. 
+
+### Encryption strategies
+
+NebulaGraph offers three encryption strategies that you can choose and configure according to your needs.
+
+- Encryption of client-graph and all inter-service communications
+
+  If you want to encrypt all data transmission between the client, Graph service, Meta service, and Storage service, you need to add the `enable_ssl = true` field to each service.
+
+  Here is an example configuration:
+
+  ```yaml
+  apiVersion: apps.nebula-graph.io/v1alpha1
+  kind: NebulaCluster
+  metadata:
+    name: nebula
+    namespace: default
+  spec:
     sslCerts:
-    autoMountServerCerts: "true"    # Automatically mount the server certificate and private key into the Pod.
-    serverSecret: "server-cert"     # The name of the server certificate Secret.
-    serverCert: ""                  # The key name of the certificate in the server certificate Secret, default is tls.crt.
-    serverKey: ""                   # The key name of the private key in the server certificate Secret, default is tls.key.
-    clientSecret: "client-cert"     # The name of the client certificate Secret.
-    clientCert: ""                  # The key name of the certificate in the client certificate Secret, default is tls.crt.
-    clientKey: ""                   # The key name of the private key in the client certificate Secret, default is tls.key.
-    caSecret: "ca-cert"             # The name of the CA certificate Secret.
-    caCert: ""                      # The key name of the certificate in the CA certificate Secret, default is ca.crt.
-    ```
+      autoMountServerCerts: "true"  # Automatically mount the server certificate and private key into the Pod.
+      serverSecret: "server-cert"   # The Secret name of the server certificate and private key.
+      clientSecret: "client-cert"   # The Secret name of the client certificate and private key.
+      caSecret: "ca-cert"           # The Secret name of the CA certificate.
+    graphd:
+      config:
+        enable_ssl: "true"
+    metad:
+      config:
+        enable_ssl: "true"
+    storaged:
+      config:
+        enable_ssl: "true"
+  ```
 
-    The `serverCert` and `serverKey`, `clientCert` and `clientKey`, and `caCert` are used to specify the key names of the certificate and private key of the server Secret, the key names of the certificate and private key of the client Secret, and the key name of the CA Secret certificate. If you do not customize these field values, Operator defaults `serverCert` and `clientCert` to `tls.crt`, `serverKey` and `clientKey` to `tls.key`, and `caCert` to `ca.crt`. However, in the K8s cluster, the TLS type Secret uses `tls.crt` and `tls.key` as the default key names for the certificate and private key. Therefore, after creating the NebulaGraph cluster, you need to manually change the `caCert` field from `ca.crt` to `tls.crt` in the cluster configuration, so that the Operator can correctly read the content of the CA certificate. Before you customize these field values, you need to specify the key names of the certificate and private key in the Secret when creating it. For how to create a Secret with the key name specified, run the `kubectl create secret generic -h` command for help.
 
-    You can use the `insecureSkipVerify` field to decide whether the client will verify the server's certificate chain and hostname. In production environments, it is recommended to set this to `false` to ensure the security of communication. If set to `true`, the client will not verify the server's certificate chain and hostname.
+- Encryption of only Graph service communication
 
-    ```yaml
+  If the K8s cluster is deployed in the same data center and only the port of the Graph service is exposed externally, you can choose to encrypt only data transmission between the client and the Graph service. In this case, other services can communicate internally without encryption. Just add the `enable_graph_ssl = true` field to the Graph service.
+
+  Here is an example configuration:
+
+  ```yaml
+  apiVersion: apps.nebula-graph.io/v1alpha1
+  kind: NebulaCluster
+  metadata:
+    name: nebula
+    namespace: default
+  spec:
     sslCerts:
-    # Determines whether the client needs to verify the server's certificate chain and hostname when establishing an SSL connection. 
-    insecureSkipVerify: false 
-    ```
+      autoMountServerCerts: "true"  
+      serverSecret: "server-cert"
+      caSecret: "ca-cert"
+    graphd:
+      config:
+        enable_graph_ssl: "true"
+  ```
 
-    !!! caution
+  !!! note
 
-        Make sure that you have added the hostname or IP of the server to the server's certificate's `subjectAltName` field before the `insecureSkipVerify` is set to `false`. If the hostname or IP of the server is not added, an error will occur when the client verifies the server's certificate chain and hostname. For details, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
+        Because Operator doesn't need to call the Graph service through an interface, it's not necessary to set `clientSecret` in `sslCerts`.
 
-    When the certificates are approaching expiration, they can be automatically updated by installing [cert-manager](https://cert-manager.io/docs/installation/supported-releases/). NebulaGraph will monitor changes to the certificate directory files, and once a change is detected, it will load the new certificate content into memory. 
+- Encryption of only Meta service communication
 
-    ### Encryption strategies
+  If you need to transmit confidential information to the Meta service, you can choose to encrypt data transmission related to the Meta service. In this case, you need to add the `enable_meta_ssl = true` configuration to each component.
 
-    NebulaGraph offers three encryption strategies that you can choose and configure according to your needs.
+  Here is an example configuration:
 
-    - Encryption of client-graph and all inter-service communications
+  ```yaml
+  apiVersion: apps.nebula-graph.io/v1alpha1
+  kind: NebulaCluster
+  metadata:
+    name: nebula
+    namespace: default
+  spec:
+    sslCerts:
+      autoMountServerCerts: "true"
+      serverSecret: "server-cert"
+      clientSecret: "client-cert"
+      caSecret: "ca-cert"
+    graphd:
+      config:
+        enable_meta_ssl: "true"
+    metad:
+      config:
+        enable_meta_ssl: "true"
+    storaged:
+      config:
+        enable_meta_ssl: "true"
+  ```
 
-      If you want to encrypt all data transmission between the client, Graph service, Meta service, and Storage service, you need to add the `enable_ssl = true` field to each service.
+  After setting up the encryption policy, when an external [client](../../14.client/1.nebula-client.md) needs to connect to the Graph service with mutual TLS, you still need to set the relevant TLS fields according to the different clients. See the Use NebulaGraph Console to connect to Graph service section below for examples.
 
-      Here is an example configuration:
+### Example of enabling mTLS without hot-reloading
 
-      ```yaml
-      apiVersion: apps.nebula-graph.io/v1alpha1
-      kind: NebulaCluster
-      metadata:
-        name: nebula
-        namespace: default
-      spec:
-        sslCerts:
-          autoMountServerCerts: "true"  # Automatically mount the server certificate and private key into the Pod.
-          serverSecret: "server-cert"   # The Secret name of the server certificate and private key.
-          clientSecret: "client-cert"   # The Secret name of the client certificate and private key.
-          caSecret: "ca-cert"           # The Secret name of the CA certificate.
-        graphd:
-          config:
-            enable_ssl: "true"
-        metad:
-          config:
-            enable_ssl: "true"
-        storaged:
-          config:
-            enable_ssl: "true"
-      ```
+1. Use the pre-generated server and client certificates and private keys, and the CA certificate to create a Secret for each.
 
+  ```yaml
+  kubectl create secret tls <client/server/ca-cert-secret> --key=<client/server/ca.key> --cert=<client/server/ca.crt>
+  ```
 
-    - Encryption of only Graph service communication
+  - `tls`: Indicates that the type of secret being created is TLS, which is used to store TLS certificates.
+  - `<client/server/ca-cert-secret>`: Specifies the name of the new secret being created, which can be customized.
+  - `--key=<client/server/ca.key>`: Specifies the path to the private key file of the TLS certificate to be stored in the secret.
+  - `--cert=<client/server/ca.crt>`: Specifies the path to the public key certificate file of the TLS certificate to be stored in the secret.
+  
 
-      If the K8s cluster is deployed in the same data center and only the port of the Graph service is exposed externally, you can choose to encrypt only data transmission between the client and the Graph service. In this case, other services can communicate internally without encryption. Just add the `enable_graph_ssl = true` field to the Graph service.
+2. Add server certificate, client certificate, CA certificate configuration, and encryption policy configuration in the corresponding cluster instance YAML file. For details, see [Encryption strategies](#encryption_strategies).
+  
+  For example, add encryption configuration for transmission data between client, Graph service, Meta service, and Storage service.
 
-      Here is an example configuration:
+  ```yaml
+  apiVersion: apps.nebula-graph.io/v1alpha1
+  kind: NebulaCluster
+  metadata:
+    name: nebula
+    namespace: default
+  spec:
+    sslCerts:
+      autoMountServerCerts: "true"
+      serverSecret: "server-cert"  // The name of the server Certificate Secret.
+      clientSecret: "client-cert"  // The name of the client Certificate Secret.
+      caSecret: "ca-cert"          // The name of the CA Certificate Secret.
+    graphd:
+      config:
+        enable_ssl: "true"
+    metad:
+      config:
+        enable_ssl: "true"
+    storaged:
+      config:
+        enable_ssl: "true"
+  ```
 
-      ```yaml
-      apiVersion: apps.nebula-graph.io/v1alpha1
-      kind: NebulaCluster
-      metadata:
-        name: nebula
-        namespace: default
-      spec:
-        sslCerts:
-          autoMountServerCerts: "true"  
-          serverSecret: "server-cert"
-          caSecret: "ca-cert"
-        graphd:
-          config:
-            enable_graph_ssl: "true"
-      ```
+3. Use `kubectl apply -f` to apply the file to the Kubernetes cluster.
 
-      !!! note
+4. Verify that the values of `serverCert`, `serverKey`, `clientCert`, `clientKey`, `caCert` under the `sslCerts` field in the cluster configuration match the key names of the certificates and private keys stored in the created Secret.
 
-            Because Operator doesn't need to call the Graph service through an interface, it's not necessary to set `clientSecret` in `sslCerts`.
+  ```bash
+  # Check the key names of the certificate and private key stored in the Secret. For example, check the key name of the CA certificate stored in the Secret.
+  kubectl get secret ca-cert -o yaml
+  ```
 
-    - Encryption of only Meta service communication
+  ```bash
+  # Check the cluster configuration file.
+  kubectl get nebulacluster nebula -o yaml
+  ```
 
-      If you need to transmit confidential information to the Meta service, you can choose to encrypt data transmission related to the Meta service. In this case, you need to add the `enable_meta_ssl = true` configuration to each component.
+  Example output:
 
-      Here is an example configuration:
+  ```
+  ...
+  spec:
+    sslCerts:
+      autoMountServerCerts: "true"
+      serverSecret: server-cert
+      serverCert: tls.crt
+      serverKey: tls.key
+      clientSecret: client-cert
+      clientCert: tls.crt
+      clientKey: tls.key
+      caSecret: ca-cert
+      caCert: ca.crt    
+  ...
+  ```
 
-      ```yaml
-      apiVersion: apps.nebula-graph.io/v1alpha1
-      kind: NebulaCluster
-      metadata:
-        name: nebula
-        namespace: default
-      spec:
-        sslCerts:
-          autoMountServerCerts: "true"
-          serverSecret: "server-cert"
-          clientSecret: "client-cert"
-          caSecret: "ca-cert"
-        graphd:
-          config:
-            enable_meta_ssl: "true"
-        metad:
-          config:
-            enable_meta_ssl: "true"
-        storaged:
-          config:
-            enable_meta_ssl: "true"
-      ```
+  If the key names of the certificates and private keys stored in the Secret are different from the values of `serverCert`, `serverKey`, `clientCert`, `clientKey`, `caCert` under the `sslCerts` field in the cluster configuration, you need to execute `kubectl edit nebulacluster <cluster_name>` to manually modify the cluster configuration file.
 
-      After setting up the encryption policy, when an external [client](../../14.client/1.nebula-client.md) needs to connect to the Graph service with mutual TLS, you still need to set the relevant TLS fields according to the different clients. See the Use NebulaGraph Console to connect to Graph service section below for examples.
+  In the example output, the key name of the CA certificate in the TLS-type Secret is `tls.crt`, so you need to change the value of caCert from `ca.crt` to `tls.crt`.
 
-    ### Example of enabling mTLS without hot-reloading
+5. Use NebulaGraph Console to connect to the Graph service and establish a secure TLS connection.
 
-    1. Use the pre-generated server and client certificates and private keys, and the CA certificate to create a Secret for each.
+  Example:
 
-      ```yaml
-      kubectl create secret tls <client/server/ca-cert-secret> --key=<client/server/ca.key> --cert=<client/server/ca.crt>
-      ```
+  ```
+  kubectl run -ti --image vesoft/nebula-console:v{{console.release}} --restart=Never -- nebula-console -addr 10.98.xxx.xx  -port 9669 -u root -p nebula -enable_ssl -ssl_root_ca_path /path/to/cert/root.crt -ssl_cert_path /path/to/cert/client.crt -ssl_private_key_path /path/to/cert/client.key
+  ```
 
-      - `tls`: Indicates that the type of secret being created is TLS, which is used to store TLS certificates.
-      - `<client/server/ca-cert-secret>`: Specifies the name of the new secret being created, which can be customized.
-      - `--key=<client/server/ca.key>`: Specifies the path to the private key file of the TLS certificate to be stored in the secret.
-      - `--cert=<client/server/ca.crt>`: Specifies the path to the public key certificate file of the TLS certificate to be stored in the secret.
-      
+  - `-enable_ssl`: Use mTLS when connecting to NebulaGraph.
+  - `-ssl_root_ca_path`: Specify the storage path of the CA root certificate.
+  - `-ssl_cert_path`: Specify the storage path of the TLS public key certificate.
+  - `-ssl_private_key_path`: Specify the storage path of the TLS private key.
+  - For details on using NebulaGraph Console to connect to the Graph service, see [Connect to NebulaGraph](../4.connect-to-nebula-graph-service.md).
 
-    2. Add server certificate, client certificate, CA certificate configuration, and encryption policy configuration in the corresponding cluster instance YAML file. For details, see [Encryption strategies](#encryption_strategies).
-      
-      For example, add encryption configuration for transmission data between client, Graph service, Meta service, and Storage service.
+  !!! note
 
-      ```yaml
-      apiVersion: apps.nebula-graph.io/v1alpha1
-      kind: NebulaCluster
-      metadata:
-        name: nebula
-        namespace: default
-      spec:
-        sslCerts:
-          autoMountServerCerts: "true"
-          serverSecret: "server-cert"  // The name of the server Certificate Secret.
-          clientSecret: "client-cert"  // The name of the client Certificate Secret.
-          caSecret: "ca-cert"          // The name of the CA Certificate Secret.
-        graphd:
-          config:
-            enable_ssl: "true"
-        metad:
-          config:
-            enable_ssl: "true"
-        storaged:
-          config:
-            enable_ssl: "true"
-      ```
+        If you set `spec.console` to start a NebulaGraph Console container in the cluster, you can enter the console container and run the following command to connect to the Graph service.
 
-    3. Use `kubectl apply -f` to apply the file to the Kubernetes cluster.
-
-    4. Verify that the values of `serverCert`, `serverKey`, `clientCert`, `clientKey`, `caCert` under the `sslCerts` field in the cluster configuration match the key names of the certificates and private keys stored in the created Secret.
-
-      ```bash
-      # Check the key names of the certificate and private key stored in the Secret. For example, check the key name of the CA certificate stored in the Secret.
-      kubectl get secret ca-cert -o yaml
-      ```
-
-      ```bash
-      # Check the cluster configuration file.
-      kubectl get nebulacluster nebula -o yaml
-      ```
-
-      Example output:
-
-      ```
-      ...
-      spec:
-        sslCerts:
-          autoMountServerCerts: "true"
-          serverSecret: server-cert
-          serverCert: tls.crt
-          serverKey: tls.key
-          clientSecret: client-cert
-          clientCert: tls.crt
-          clientKey: tls.key
-          caSecret: ca-cert
-          caCert: ca.crt    
-      ...
-      ```
-
-      If the key names of the certificates and private keys stored in the Secret are different from the values of `serverCert`, `serverKey`, `clientCert`, `clientKey`, `caCert` under the `sslCerts` field in the cluster configuration, you need to execute `kubectl edit nebulacluster <cluster_name>` to manually modify the cluster configuration file.
-
-      In the example output, the key name of the CA certificate in the TLS-type Secret is `tls.crt`, so you need to change the value of caCert from `ca.crt` to `tls.crt`.
-
-    5. Use NebulaGraph Console to connect to the Graph service and establish a secure TLS connection.
-
-      Example:
-
-      ```
-      kubectl run -ti --image vesoft/nebula-console:v{{console.release}} --restart=Never -- nebula-console -addr 10.98.xxx.xx  -port 9669 -u root -p nebula -enable_ssl -ssl_root_ca_path /path/to/cert/root.crt -ssl_cert_path /path/to/cert/client.crt -ssl_private_key_path /path/to/cert/client.key
-      ```
-
-      - `-enable_ssl`: Use mTLS when connecting to NebulaGraph.
-      - `-ssl_root_ca_path`: Specify the storage path of the CA root certificate.
-      - `-ssl_cert_path`: Specify the storage path of the TLS public key certificate.
-      - `-ssl_private_key_path`: Specify the storage path of the TLS private key.
-      - For details on using NebulaGraph Console to connect to the Graph service, see [Connect to NebulaGraph](../4.connect-to-nebula-graph-service.md).
-
-      !!! note
-
-            If you set `spec.console` to start a NebulaGraph Console container in the cluster, you can enter the console container and run the following command to connect to the Graph service.
-
-            ```bash
-            nebula-console -addr 10.98.xxx.xx  -port 9669 -u root -p nebula -enable_ssl -ssl_root_ca_path /path/to/cert/root.crt -ssl_cert_path /path/to/cert/client.crt -ssl_private_key_path /path/to/cert/client.key
-            ```
-      
-    At this point, you can enable mTLS in NebulaGraph.
+        ```bash
+        nebula-console -addr 10.98.xxx.xx  -port 9669 -u root -p nebula -enable_ssl -ssl_root_ca_path /path/to/cert/root.crt -ssl_cert_path /path/to/cert/client.crt -ssl_private_key_path /path/to/cert/client.key
+        ```
+  
+At this point, you can enable mTLS in NebulaGraph.
 
