--- a/docs-2.0/nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
+++ b/docs-2.0/nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
@@ -229,6 +229,31 @@ The following section presents two methods for managing the Dashboard service. I
   sudo systemctl stop nbd-prometheus.service
   ```
 
+## Directory structure
+
+The structure of the Dashboard Enterprise Edition is as follows:
+
+```bash
+├── assets # Static resource files
+│   └── ...
+├── bin # System executables
+│   └──...
+├── CMakeLists.txt # CMake configuration files
+|   
+├── data # Database data files
+│   └──...
+├── download # Dependency packages
+│   └──...
+├── etc # Configuration files
+│   └──...
+├── logs # Log files
+│   └──...
+├── pids # Service process files
+│   └──...
+└── scripts # Scripts for managing services
+    └──...
+```
+
 ## View logs
 
 - Users who manage services using `dashboard.service` can view the Dashboard Enterprise Edition logs in the `logs` directory.
@@ -248,11 +273,11 @@ The following section presents two methods for managing the Dashboard service. I
   |`prometheus.log`|  Prometheus service log.   |
   |`br`| Backup and restore service log.    |
   |`webserver.log`| Dashboard service log. </br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `console`.   |
-  |`access.log`| Access log. </br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.   |
-  |`error.log`|  Error log. </br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`. |
-  |`severe.log`| Severe log. </br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.   |
-  |`slow.log`|  Slow log. </br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.  |
-  |`stat.log`|  Statistic log. </br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.  |
+  |`access.log`| Access log. Records all request messages for accessing the services, including request time, source address, requested URL, HTTP method, returned HTTP status code, etc.</br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.   |
+  |`error.log`|  Error log. Records error messages that occur during service running. This may include runtime errors, system errors, service logic errors, etc.</br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`. |
+  |`severe.log`| Severe log. Records error messages that could cause the system to crash, or seriously affect the correct functioning of the system. This may include runtime errors, system errors, serious service logic errors, etc.</br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.   |
+  |`slow.log`|  Slow log. Records requests or operations whose execution time exceeds a preset threshold, helping users identify performance bottlenecks.</br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.  |
+  |`stat.log`|  Statistic log. Records statistical information about the service, the content of which depends on the needs of the application and may include a variety of performance metrics, usage statistics, etc.</br>It takes effect only when the `Log.Mode` in the Dashboard configuration is `file`.  |
 
 - Users managing services with systemd can access the logs for each Dashboard Enterprise Edition service through `journalctl`.
 
