--- a/docs-2.0/nebula-dashboard-ent/8.faq.md
+++ b/docs-2.0/nebula-dashboard-ent/8.faq.md
@@ -64,7 +64,7 @@ If you import a cluster deployed with Docker, it also prompts "SSH connection er
 
 ## How to implement a highly available architecture
 
-Users can use third-party high-availability software (e.g. HAProxy) to implement the high-availability architecture for Dashboard and the high-availability architecture for LM.
+Users can use third-party high-availability software (e.g. [HAProxy](https://www.haproxy.org/)) to implement the high-availability architecture for Dashboard and the high-availability architecture for LM.
 
 For example, you can deploy Dashboard service, database service, Prometheus service, and LM service on multiple machines. Then use HAProxy to implement their respective load balancing.
 
