--- a/docs-2.0/nebula-operator/4.connect-to-nebula-graph-service.md
+++ b/docs-2.0/nebula-operator/4.connect-to-nebula-graph-service.md
@@ -313,7 +313,7 @@ Steps are as follows.
         kubectl exec -it nebula-console -- /bin/sh
 
         # Connect to NebulaGraph databases.
-        nebula-console -addr <host_ip> -port <external_port> -u <username> -p <password>
+        nebula-console -addr <ingress_host_ip> -port <external_port> -u <username> -p <password>
         ```
 
         For information about the nebula-console container, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).  
