--- a/docs-2.0/7.data-security/1.authentication/2.management-user.md
+++ b/docs-2.0/7.data-security/1.authentication/2.management-user.md
@@ -175,11 +175,10 @@ The `root` user with the **GOD** role can run `ALTER USER` to set a new password
     ALTER USER <user_name> [WITH PASSWORD '<password>'] [WITH IP WHITELIST <ip_list>];
   ```
 
+  - `ip_list`: Sets the IP address whitelist. Any IP can connect to the database without this option. When this option is used, only IPs in the list can connect to the database. Use commas to separate multiple IP addresses.
+  - `%`: Cancel the whitelist. Users can connect to the database using any IP.  
+
 - Example with enterprise edition
-
-  !!! enterpriseonly
-
-        Using `WITH IP WHITELIST` without any IP after it means whitelisting is canceled and users can connect to NebulaGraph using any IP.
 
   ```ngql
   nebula> ALTER USER user2 WITH PASSWORD 'change_password';
@@ -191,7 +190,7 @@ The `root` user with the **GOD** role can run `ALTER USER` to set a new password
   | "root"  | ""              |
   | "user2" | "192.168.10.10" |
   +---------+-----------------+
-  nebula> ALTER USER user2 WITH IP WHITELIST;
+  nebula> ALTER USER user2 WITH IP WHITELIST %;
   nebula> SHOW USERS;
   +---------+--------------+
   | Account | IP Whitelist |
